# xmp_tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: args.hpp  db_tools.hpp  xmp_file.hpp  xmp_tools.hpp
src/: CMakeLists.txt  args.cpp  db_tools.cpp  example.cpp  example.hpp  main.cpp  xmp_file.cpp  xmp_tools.cpp
src/libs/sqlite3/: CMakeLists.txt
test/: CMakeLists.txt  test_example.cpp  test_xmp_tool.cpp  test_xmp_tools.cpp
